# IA-vanna-flask-rest-cn

./: README.md  Start script.bat  my_vanna.py  pyproject.toml  textos.txt
